JDK-8369946 : Bytecode rewriting causes Java heap corruption on PPC
Type:Bug
Component:hotspot
Sub-Component:runtime
Affected Version:8,11,17,21,25,26
Priority:P2
Status:Resolved
Resolution:Fixed
CPU:ppc
Submitted:2025-10-15
Updated:2025-10-27
Resolved:2025-10-22
The Version table provides details related to the release that this issue/RFE will be addressed.
Unresolved : Release in which this issue/RFE will be addressed. Resolved: Release in which this issue/RFE has been resolved. Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.
Same as JDK-8369506, but for PPC. It is believed that the same issue is present on PPC until proven otherwise.
Comments
A pull request was submitted for review.
Branch: master
URL: https://git.openjdk.org/jdk17u-dev/pull/4114
Date: 2025-10-27 11:57:51 +0000
27-10-2025
[jdk21u-fix-request] Approval Request from Martin
JDK21u is affected by this problem. This backport doesn't apply cleanly, but works the same way as in newer releases. It only touches PPC64 files (adds missing memory barriers and comments) and has been reviewed.
25-10-2025
A pull request was submitted for review.
Branch: master
URL: https://git.openjdk.org/jdk21u-dev/pull/2384
Date: 2025-10-23 13:01:38 +0000
23-10-2025
[jdk25u-fix-request] Approval Request from Martin
JDK25u is affected by this problem. The aarch64 fix JDK-8369506 has already been backported. Besides minor refactoring, the PR mainly inserts missing memory barriers. It applies cleanly and only touches PPC64 files.
22-10-2025
A pull request was submitted for review.
Branch: master
URL: https://git.openjdk.org/jdk25u/pull/331
Date: 2025-10-22 08:44:07 +0000