8369946: Bytecode rewriting causes Java heap corruption on PPC

Reviewed-by: rrich
Backport-of: 6bf3581bbacc2ed8f6411d23a5ab332376c53c87