src/hotspot/cpu/ppc/interp_masm_ppc.hpp
@@ -126,7 +126,8 @@ class InterpreterMacroAssembler: public MacroAssembler {
 
   void get_cache_index_at_bcp(Register Rdst, int bcp_offset, size_t index_size);
 
-  void get_cache_and_index_at_bcp(Register cache, int bcp_offset, size_t index_size = sizeof(u2));
+  void get_cache_and_index_at_bcp(Register cache, int bcp_offset, size_t index_size = sizeof(u2),
+                                  bool for_fast_bytecode = false);
   void load_resolved_indy_entry(Register cache, Register index);
 
   void get_u4(Register Rdst, Register Rsrc, int offset, signedOrNot is_signed);
